Use new unified GC options and remove -XX:+UseG1GC
Starting from JDK 9, G1 is the default GC.

This commit fixes the issue of unrecognized VM options.